# tesseract-bin

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
cmake/: patch-tiff-config.cmake  preload-deps.cmake
src/tesseract_bin/: __init__.py  __main__.py
tests/: test_ocr.py
